# pre-commit-context-header

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  LICENSE  README.md  context_headers.py  pyproject.toml
.github/: dependabot.yaml
.github/workflow/: ci.yaml  release.yaml
.github/workflows/: ci.yaml  pre-commit-sync.yaml  release.yaml
src/context_headers/: AGENTS.md  __init__.py  __main__.py  cli.py  config.py  core.py
src/context_headers/languages/: AGENTS.md  __init__.py  base.py  factory.py  strategies.py
tests/: AGENTS.md  __init__.py  test_cli.py  test_config_sync.py  test_context_header.py  test_core.py  test_version.py
tests/languages/: __init__.py  test_factory.py  test_strategies.py
