# File: pyproject.toml
[project]
name = "pre-commit-context-header"
version = "0.1.0"
description = "A universal pre-commit utility that enforces file path headers to ensure AI coding agents and LLMs always maintain context."
authors = [{ name = "meek2100", email = "meek2100@users.noreply.github.com" }]
requires-python = ">=3.9"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["pytest", "build"]

[project.scripts]
context-headers = "context_headers:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
