# File: pyproject.toml
[project]
name = "pre-commit-context-header"
version = "0.1.0"
description = "A universal pre-commit utility that enforces file path headers to ensure AI coding agents and LLMs always maintain context."
authors = [{ name = "meek2100", email = "meek2100@users.noreply.github.com" }]
requires-python = ">=3.9"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",      # Downgraded from 9.0.2 to support Python 3.9
    "pytest-cov==7.0.0",
    "ruff==0.14.10",
    "pre-commit==4.5.1",
    "mypy==1.19.1",
    "types-setuptools>=80.9.0",
]

[project.scripts]
context-headers = "context_headers.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
exclude = ["build/"]

[[tool.mypy.overrides]]
module = ["pytest", "_pytest.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
addopts = "--cov=context_headers --cov-report=term-missing --cov-fail-under=100"
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.coverage.run]
source = ["src"]
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
